fix pills on mobile

--- a/gatsby-template/src/components/pills.css
+++ b/gatsby-template/src/components/pills.css
@@ -1,6 +1,3 @@
-.pills {
-  display: flex;
-}
 .pill {
   font-size: 1.5rem;
   display: inline-flex;
